--- a/project-files/techtask/techtask/templates/quickstart/base.html
+++ b/project-files/techtask/techtask/templates/quickstart/base.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>Тестовое задание для Архбума</title>
+    <h1>Информация о системе</h1>
   </head>
   <body>
-    <p>Информация о системе</p>
+    {% block main_information %}
+    <p>Информация нужного Template. В случае отображения почините Templates</p>
+    {% endblock %}
   </body>
 </html>
