Исправляю ошибку "Do not evaluate the `.queryset` attribute directly, as the result will be cached and reused between requests. Use `.all()` or call `.get_queryset()` instead."

--- a/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
+++ b/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
@@ -1,3 +1,9 @@
-{% extends 'quickstart/base.html' %}
+{% extends 'base.html' %}
 
-
+{% block main_information %}
+<ul>
+  {% for person in Persons %}
+  <li>person</li>
+  {% endfor %}
+</ul>
+{% endblock %}
