Список Persons показывается на persons-list/

--- a/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
+++ b/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
@@ -2,7 +2,7 @@
 
 {% block main_information %}
 <ul>
-  {% for person in Persons %}
+  {% for person in Persons.all %}
   <li>person</li>
   {% endfor %}
 </ul>
