Исправил отображение списка пользователей

--- a/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
+++ b/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
@@ -3,7 +3,7 @@
 {% block main_information %}
 <ul>
   {% for person in Persons.all %}
-  <li>person</li>
+  <li>{{ person }}</li>
   {% endfor %}
 </ul>
 {% endblock %}
