--- a/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
+++ b/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main_information %}
+<p>Список Persons</p>
 <ul>
   {% for person in Persons.all %}
   <li>{{ person }}</li>
