--- a/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
+++ b/project-files/techtask/techtask/templates/quickstart/all-persons-list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main_information %}
-<h2>Список Persons</h2>
+<h2>Список сотрудников</h2>
 <ul>
   {% for person in Persons.all %}
   <li>{{ person }}</li>
